Implement star-join algorithm for cliques